Rename app and fix hybrid collage gaps
